--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "shiba/betoerr",
+    "name": "shibakouding/betoerr",
     "type": "library",
     "version":"1.0.0",
     "autoload": {
