--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "shibakouding/betoerr",
     "type": "library",
     "version":"1.0.0",
+    "license": "MIT",
     "autoload": {
         "psr-4": {
             "think\\Betoerr\\": "src/"
